fixed shrinked loading on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -320,7 +320,6 @@ main .welcome {
   display: flex;
   left: 0;
   overflow: scroll;
-  box-shadow: inset -20px 0 20px -20px rgba(0, 0, 0, 0.5);
 }
 
 .food{
